<resources>
    <string name="app_name">Child Care</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">QUÊN MẬT KHẨU ?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">Bạn Chưa Có Tài Khoản?</string>
    <string name="register_now"> Đăng Ký Ngay </string>
</resources>