<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

  <View
      android:id="@+id/topView"
      android:layout_width="0dp"
      android:layout_height="150dp"
      android:background="@color/colorPrimary"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <View
      android:id="@+id/view5"
      android:layout_width="0dp"
      android:layout_height="100dp"
      android:background="@drawable/wave"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/topView" />

  <ImageView
      android:id="@+id/imageView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_person"
      android:contentDescription="@string/top_icon" />

  <TextView
      android:id="@+id/topText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="48dp"
      android:text="Bạn đã sẵn sàng đăng nhập ?"
      android:textColor="@android:color/white"
      android:textSize="30sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toStartOf="@+id/imageView5"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/topView"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/email"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:background="@drawable/round_border"
      android:drawableStart="@drawable/ic_baseline_person_25"
      android:drawablePadding="16dp"
      android:ems="10"
      android:hint="Tài khoản"
      android:inputType="textPersonName"
      android:padding="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/view5"
      />


  <EditText
      android:id="@+id/password"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="32dp"
      android:background="@drawable/round_border"
      android:drawableStart="@drawable/ic_lock"
      android:drawablePadding="16dp"
      android:ems="10"
      android:hint="Mật khẩu"
      android:inputType="textPassword"
      android:padding="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/email" />

  <Button
      android:id="@+id/btndn"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="32dp"
      android:background="@drawable/round_bg"
      android:text="@string/login"
      android:textColor="@android:color/white"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/password" />

  <TextView
      android:id="@+id/quenmk"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="18dp"
      android:layout_marginEnd="32dp"
      android:text="@string/forgot_password"
      android:textColor="@color/colorPrimary"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btndn" />

  <TextView
      android:id="@+id/textView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="15dp"
      android:layout_marginBottom="20dp"
      android:text="@string/or"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/quenmk" />

  <LinearLayout
      android:id="@+id/google_img"
      android:layout_width="0dp"
      android:layout_height="40dp"
      android:layout_marginTop="15dp"
      android:layout_marginStart="75dp"
      android:layout_marginEnd="75dp"
      android:orientation="horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView7">

    <ImageView
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:background="@color/white"
        android:contentDescription="@string/google_icon"
        app:srcCompat="@drawable/google" />

    <TextView
        android:layout_width="210dp"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:layout_marginStart="4dp"
        android:text="Sign in with Google"
        android:textColor="@color/white"
        android:textSize="20dp" />
  </LinearLayout>

  <LinearLayout
      android:id="@+id/linearLayout3"
      android:layout_width="0dp"
      android:layout_height="30dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="150dp"
      android:layout_marginEnd="32dp"
      android:orientation="horizontal"
      android:gravity="center"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView7">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user_register_now"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dangki"
        android:orientation="vertical">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/register_now"
          android:textColor="@color/colorPrimary"
          android:textSize="19sp"
          android:layout_marginStart="5dp"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
      <View
          android:layout_width="120dp"
          android:layout_height="2dp"
          android:layout_marginTop="2dp"
          android:layout_marginStart="5dp"
          android:background="@color/colorPrimary" />

    </LinearLayout>



  </LinearLayout>

  <ImageView
      android:id="@+id/show_password"
      android:layout_width="33dp"
      android:layout_height="33dp"
      android:layout_below="@id/password"
      app:layout_constraintBottom_toBottomOf="@+id/password"
      app:layout_constraintEnd_toEndOf="@+id/password"
      app:layout_constraintHorizontal_bias="0.971"
      app:layout_constraintStart_toStartOf="@+id/password"
      app:layout_constraintTop_toTopOf="@+id/password"
      />


</androidx.constraintlayout.widget.ConstraintLayout>